# stock-trader

./: .gitignore  DESKTOP_APP_GUIDE.md  ENHANCED_FEATURES.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  commands.rs  database.rs  main.rs  models.rs  stock_api.rs
src/components/: ErrorBoundary.tsx  PortfolioAnalysis.tsx  PriceAlerts.tsx  Settings.tsx  StockPriceDisplay.tsx  StockSearch.tsx  StockSelectTest.tsx  TradeForm.tsx  TradeList.tsx
src/hooks/: useTauri.ts
src/services/: notificationService.ts  priceCalculationService.ts
src/types/: index.ts
src/utils/: priceCalculator.ts
tests/: Cargo.toml  TESTING_REPORT.md  calculation_test.rs  database_test.rs  frontend_backend_test.js  run_all_tests.rs  tauri_integration_test.html  test_runner.html  trade_management_test.rs  ui_test.js
tests/src/: main.rs
